Hide Threads Count from Channel Toolbar.

--- a/source/KUNEFE-Cord.source.css
+++ b/source/KUNEFE-Cord.source.css
@@ -631,6 +631,11 @@ a[data-list-item-id="channels___guild-active-threads"] {
     display: none;
 }
 
+/* Remove Threads Count from Channel Toolbar. */
+.count-bFJRJm {
+    display: none;
+}
+
 /* Revert the Role Redesign. */
 .role-2irmRk{
   background: transparent;
